@@ -820,15 +820,6 @@ void initialize_etex_commands(void)
     primitive_luatex("shapemode", assign_int_cmd, int_base + shape_mode_code, int_base);
     primitive_luatex("hyphenationbounds", assign_int_cmd, int_base + hyphenation_bounds_code, int_base);
 
-    /*tex
-
-        The \.{\\showstream} parameter allows to redirect the output of |xray_cmd|
-        commands to any write stream.
-
-    */
-
-    primitive_tex("showstream", assign_int_cmd, int_base + show_stream_code, int_base);
-
     primitive_etex("showgroups", xray_cmd, show_groups, 0);
 
     /*tex
